style: Format code with google-java-format, prettier and standardjs